--- a/quiz.ui
+++ b/quiz.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>859</width>
+    <width>626</width>
     <height>708</height>
    </rect>
   </property>
@@ -83,20 +83,20 @@ QPushButton {
      <rect>
       <x>20</x>
       <y>100</y>
-      <width>821</width>
-      <height>551</height>
+      <width>581</width>
+      <height>531</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="widget">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>821</width>
-       <height>491</height>
+       <width>581</width>
+       <height>461</height>
       </rect>
      </property>
      <attribute name="label">
@@ -105,79 +105,61 @@ QPushButton {
      <layout class="QGridLayout" name="gridLayout_3">
       <item row="0" column="0">
        <widget class="QFrame" name="db_frame">
-        <property name="frameShape">
-         <enum>QFrame::Shape::StyledPanel</enum>
-        </property>
         <property name="frameShadow">
          <enum>QFrame::Shadow::Raised</enum>
         </property>
-        <layout class="QGridLayout" name="gridLayout_2">
-         <property name="leftMargin">
-          <number>15</number>
-         </property>
-         <property name="topMargin">
-          <number>20</number>
-         </property>
-         <property name="rightMargin">
-          <number>15</number>
-         </property>
-         <property name="bottomMargin">
-          <number>9</number>
-         </property>
-         <property name="horizontalSpacing">
-          <number>15</number>
-         </property>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_11">
-           <property name="text">
-            <string>Select Category</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="2">
-          <widget class="QLabel" name="label_13">
-           <property name="text">
-            <string>Select Type</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="3">
-          <widget class="QComboBox" name="comboBox_5"/>
-         </item>
+        <layout class="QGridLayout" name="gridLayout_4">
          <item row="0" column="0">
-          <widget class="QLabel" name="label_14">
-           <property name="text">
-            <string>Number of Questions</string>
-           </property>
-          </widget>
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <item>
+            <widget class="QLabel" name="label_14">
+             <property name="text">
+              <string>Number of Questions</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="spinBox_2">
+             <property name="minimum">
+              <number>1</number>
+             </property>
+             <property name="maximum">
+              <number>20</number>
+             </property>
+             <property name="value">
+              <number>20</number>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </item>
-         <item row="1" column="1">
-          <widget class="QComboBox" name="comboBox_6"/>
-         </item>
-         <item row="1" column="3">
-          <widget class="QComboBox" name="comboBox_4"/>
-         </item>
-         <item row="0" column="2">
-          <widget class="QLabel" name="label_12">
-           <property name="text">
-            <string>Select Difficulty</string>
+         <item row="4" column="0">
+          <spacer name="verticalSpacer_3">
+           <property name="orientation">
+            <enum>Qt::Orientation::Vertical</enum>
            </property>
-          </widget>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>289</height>
+            </size>
+           </property>
+          </spacer>
          </item>
-         <item row="0" column="1">
-          <widget class="QSpinBox" name="spinBox_2">
-           <property name="minimum">
-            <number>1</number>
+         <item row="2" column="0">
+          <spacer name="verticalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Orientation::Vertical</enum>
            </property>
-           <property name="maximum">
-            <number>20</number>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>140</height>
+            </size>
            </property>
-           <property name="value">
-            <number>20</number>
-           </property>
-          </widget>
+          </spacer>
          </item>
-         <item row="2" column="0" colspan="4">
+         <item row="3" column="0">
           <widget class="QFrame" name="frame_2">
            <property name="frameShape">
             <enum>QFrame::Shape::StyledPanel</enum>
@@ -185,20 +167,30 @@ QPushButton {
            <property name="frameShadow">
             <enum>QFrame::Shadow::Raised</enum>
            </property>
-           <widget class="QPushButton" name="pushButton_4">
-            <property name="geometry">
-             <rect>
-              <x>150</x>
-              <y>40</y>
-              <width>451</width>
-              <height>24</height>
-             </rect>
-            </property>
-            <property name="text">
-             <string>Get New Question</string>
-            </property>
-           </widget>
+           <layout class="QGridLayout" name="gridLayout_2">
+            <item row="0" column="0">
+             <widget class="QPushButton" name="pushButton_4">
+              <property name="text">
+               <string>Get New Question</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </widget>
+         </item>
+         <item row="1" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_4">
+           <item>
+            <widget class="QLabel" name="label_11">
+             <property name="text">
+              <string>Select Category</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="comboBox_6"/>
+           </item>
+          </layout>
          </item>
         </layout>
        </widget>
@@ -210,8 +202,8 @@ QPushButton {
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>821</width>
-       <height>491</height>
+       <width>581</width>
+       <height>461</height>
       </rect>
      </property>
      <attribute name="label">
@@ -221,7 +213,7 @@ QPushButton {
       <item row="0" column="0">
        <widget class="QFrame" name="question_frame">
         <property name="frameShape">
-         <enum>QFrame::Shape::StyledPanel</enum>
+         <enum>QFrame::Shape::NoFrame</enum>
         </property>
         <property name="frameShadow">
          <enum>QFrame::Shadow::Raised</enum>
@@ -230,60 +222,44 @@ QPushButton {
          <item>
           <widget class="QFrame" name="info_frame">
            <property name="frameShape">
-            <enum>QFrame::Shape::StyledPanel</enum>
+            <enum>QFrame::Shape::NoFrame</enum>
            </property>
            <property name="frameShadow">
             <enum>QFrame::Shadow::Raised</enum>
            </property>
-           <layout class="QGridLayout" name="gridLayout_4">
-            <property name="horizontalSpacing">
-             <number>30</number>
+           <widget class="QLabel" name="question_count_label">
+            <property name="geometry">
+             <rect>
+              <x>725</x>
+              <y>12</y>
+              <width>38</width>
+              <height>20</height>
+             </rect>
             </property>
-            <item row="0" column="0">
-             <layout class="QHBoxLayout" name="horizontalLayout">
-              <property name="spacing">
-               <number>2</number>
-              </property>
-              <item>
-               <widget class="QLabel" name="label_7">
-                <property name="text">
-                 <string>Category</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLineEdit" name="lineEdit"/>
-              </item>
-             </layout>
-            </item>
-            <item row="0" column="1">
-             <layout class="QHBoxLayout" name="horizontalLayout_2">
-              <property name="spacing">
-               <number>2</number>
-              </property>
-              <item>
-               <widget class="QLabel" name="label_8">
-                <property name="text">
-                 <string>Difficulty</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLineEdit" name="lineEdit_2"/>
-              </item>
-             </layout>
-            </item>
-            <item row="0" column="2">
-             <widget class="QLabel" name="question_count_label">
-              <property name="text">
-               <string>10/20</string>
-              </property>
-              <property name="alignment">
-               <set>Qt::AlignmentFlag::AlignCenter</set>
-              </property>
-             </widget>
-            </item>
-           </layout>
+            <property name="text">
+             <string>10/20</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignmentFlag::AlignCenter</set>
+            </property>
+           </widget>
+           <widget class="QWidget" name="">
+            <layout class="QHBoxLayout" name="horizontalLayout">
+             <property name="spacing">
+              <number>2</number>
+             </property>
+             <item>
+              <widget class="QLabel" name="label_7">
+               <property name="text">
+                <string>Category</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="lineEdit"/>
+             </item>
+            </layout>
+           </widget>
           </widget>
          </item>
          <item>
@@ -394,7 +370,7 @@ QPushButton {
      <rect>
       <x>20</x>
       <y>10</y>
-      <width>821</width>
+      <width>591</width>
       <height>70</height>
      </rect>
     </property>
@@ -430,7 +406,7 @@ QPushButton {
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap>../../../../Users/DELL/Desktop/craps/qz.png</pixmap>
+        <pixmap>../../Documents/pz.jpg</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
@@ -471,8 +447,8 @@ QPushButton {
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>859</width>
-     <height>33</height>
+     <width>626</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
