--- a/quiz.ui
+++ b/quiz.ui
@@ -88,7 +88,7 @@ QPushButton {
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="widget">
      <property name="geometry">
@@ -96,7 +96,7 @@ QPushButton {
        <x>0</x>
        <y>0</y>
        <width>581</width>
-       <height>461</height>
+       <height>471</height>
       </rect>
      </property>
      <attribute name="label">
@@ -203,7 +203,7 @@ QPushButton {
        <x>0</x>
        <y>0</y>
        <width>581</width>
-       <height>461</height>
+       <height>471</height>
       </rect>
      </property>
      <attribute name="label">
@@ -243,23 +243,6 @@ QPushButton {
              <set>Qt::AlignmentFlag::AlignCenter</set>
             </property>
            </widget>
-           <widget class="QWidget" name="">
-            <layout class="QHBoxLayout" name="horizontalLayout">
-             <property name="spacing">
-              <number>2</number>
-             </property>
-             <item>
-              <widget class="QLabel" name="label_7">
-               <property name="text">
-                <string>Category</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QLineEdit" name="lineEdit"/>
-             </item>
-            </layout>
-           </widget>
           </widget>
          </item>
          <item>
@@ -295,6 +278,20 @@ QPushButton {
               <layout class="QVBoxLayout" name="verticalLayout">
                <item>
                 <widget class="QRadioButton" name="radioButton">
+                 <property name="text">
+                  <string>RadioButton</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QRadioButton" name="radioButton_3">
+                 <property name="text">
+                  <string>RadioButton</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QRadioButton" name="radioButton_4">
                  <property name="text">
                   <string>RadioButton</string>
                  </property>
@@ -448,7 +445,7 @@ QPushButton {
      <x>0</x>
      <y>0</y>
      <width>626</width>
-     <height>26</height>
+     <height>33</height>
     </rect>
    </property>
   </widget>
